DT-2003-11-18-1: Bugfix.:		Made changes from code review.  Mostly stylisitic.
								 Changed:		DRMAA & read_defaults.c

DT-2003-11-18-0: Bugfix.:		Fixed broken build
								 Changed:		read_defaults.c

SG-2003-11-18-0: Bugfix:    Fixed the build

AD-2003-11-18-0: Bugfix:    Fixed the build

DT-2003-11-17-1: Enhancem.: Implemented remaining DRMAA attributes.  Reworked
                            drmaa_job2sge_job() to reuse the parameter parsing
                            code in parse_job_cull.c, parse_qsub.c,
                            read_deaults.c, etc.  Introduced two new options:
                            -cat (job category) and -wd (set working directory).
                            Both options are only used by DRMAA right now, but
                            could easily be added to qsub et al.  Also added
                            a test to test_drmaa to test all DRMAA attributes.
                 Changed:   libdrmaa.so and common parameter parsing routines

DT-2003-11-17-0: Bugfix.:   -b y in sge_request would override -b n on
                            commandline
                 Changed:		qsub

AD-2003-11-17-0: Bugfix:    Revoke AD-2003-11-14-0. 

JG-2003-11-17-0: Testsuite: Some minor fixes to make testsuite installation run 
                            through without errors.
                 Cleanup:   Fixed some build dependencies.
                 Enhancem.: Partial packing of objects for use with the 
                            Berkeley DB spooling method.

AH-2003-11-14-1: Doc.:      Add supplement for AH-2003-11-13-1.

AH-2003-11-14-0: Testsuite: Further changes to reflect AH-2003-11-11-0
                            Testsuite fixes.

AD-2003-11-14-0: Bugfix:    Value of 'MAXID' was to large to be used in
                            conjunction with 'u_short'.
                 Changed:   commd

CR-2003-11-13-0: Testsuite: testsuite adaptations for (sgeee) install_core_system
